--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 .top-container {
     background-color: #e4f9f5;
     position: relative;
@@ -11,12 +10,11 @@ div {
 }
 
 body {
-        color: #40514e;
-        margin: 0;
-        text-align: center;
-        font-family: "Merriweather", serif;
+    color: #40514e;
+    margin: 0;
+    text-align: center;
+    font-family: "Merriweather", serif;
 }
-
 
 img {
     overflow-clip-margin: content-box;
@@ -30,6 +28,10 @@ h1 {
     font-family: "Sacramento", cursive;
 }
 
+.mountain {
+    max-width: 100%;
+    height: auto;
+}
 
 .top-cloud {
     position: absolute;
